--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,8 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY pyproject.toml .
-RUN pip install -e .
+RUN pip install --upgrade pip && pip install -e .
 
 COPY . .
 
 CMD ["uvicorn", "src.interfaces.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
